# GroupProject

./: .gitignore  .travis.yaml  .travis.yml  Emulator.cabal  LICENSE  Main.hs  README.md  emulator.cabal
res/: suite.gba
src/: Emulator.hs
src/Control/Concurrent/STM/: TXChan.hs
src/Emulator/: Args.hs  CPU.hs  Debug.hs  Input.hs  Interpreter.hs  Memory.hs  ROM.hs  Rom.hs  ThumbInterpreter.hs  Types.hs
src/Emulator/CPU/: Instructions.hs  Interrupts.hs
src/Emulator/CPU/Instructions/: ARM.hs  Flags.hs  Parser.hs  THUMB.hs  ThumbParser.hs  Types.hs
src/Emulator/CPU/Instructions/ARM/: Opcodes.hs  Parser.hs
src/Emulator/CPU/Instructions/THUMB/: Opcodes.hs  Parser.hs
src/Emulator/Interpreter/: ARM.hs  Monad.hs  THUMB.hs
src/Emulator/Memory/: AddressSpace.hs  IORegisters.hs  RAM.hs  ROM.hs  Region.hs  Regions.hs  Video.hs
src/Emulator/ROM/: Parser.hs
src/Emulator/Video/: BitmapModes.hs  Display.hs  Palette.hs  Renderer.hs  Sprite.hs  TileMode.hs  TileModes.hs  Util.hs  VideoController.hs
src/Utilities/: Bits.hs  Show.hs
src/Utilities/Parser/: TemplateHaskell.hs
test/Emulator/: CPUSpec.hs  InterpreterSpec.hs  MemorySpec.hs
test/Emulator/CPU/: InstructionSpec.hs  InstructionsSpec.hs
test/Emulator/CPU/Instructions/: ParserSpec.hs
test/Emulator/CPU/Instructions/ARM/: OpcodesSpec.hs  ParserSpec.hs
test/Emulator/Interpreter/: ARMSpec.hs  THUMBSpec.hs
test/Emulator/Memory/: RegionsSpec.hs
test/Emulator/ROM/: ParserSpec.hs
test/Utilities/: ShowSpec.hs
test/Utilities/Parser/: TemplateHaskellSpec.hs
