name:                emulator
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD2
license-file:        LICENSE
author:              Cameron Diver
maintainer:          sc12cd@leeds.ac.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Emulator
    Emulator.CPU
    Emulator.CPU.Instructions
    Emulator.CPU.Instructions.Parser
    Emulator.CPU.Instructions.ThumbParser
    Emulator.CPU.Interrupts
    Emulator.Interpreter
    Emulator.Input
    Emulator.Memory
    Emulator.Memory.AddressSpace
    Emulator.Memory.Regions
    Emulator.ROM
    Emulator.ROM.Parser
    Emulator.Types
    Emulator.Video.BitmapModes
    Emulator.Video.Display
    Emulator.Video.TileModes
    Emulator.Video.Util
    Emulator.Video.VideoController
    Utilities.Parser.TemplateHaskell
    Utilities.Show
  build-depends:
    base >= 4.6 && < 4.10,
    array,
    binary,
    bytestring,
    containers,
    data-default-class,
    GLUT,
    JuicyPixels,
    OpenGL,
    lens,
    mtl,
    stm,
    template-haskell,
    transformers,
    vector
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions:
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
  ghc-options: -Wall

executable emulator
  hs-source-dirs: ./
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 4.6 && < 4.10,
    emulator

test-suite test
  hs-source-dirs: test/
  main-is: Spec.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    emulator,
    bytestring,
    data-default-class,
    hspec,
    lens,
    mtl,
    QuickCheck,
    transformers
  default-extensions:
    BinaryLiterals
    LambdaCase
    ScopedTypeVariables
    TemplateHaskell
  ghc-options: -Wall -fno-warn-orphans
